<resources>
    <string name="app_name">Plant</string>
    <string name="cotton">Cotton</string>
    <string name="tomato">Tomato</string>
    <string name="corn">Corn</string>
    <string name="apple">Apple</string>
    <string name="toast_select_img">Please firstly select the Image</string>
    <string name="treatment">Treatment</string>
    <string name="healthy">"Your Plant is Healthy"</string>
    <string name="profile">Profile</string>
    <string name="home_string">Home</string>
    <string name="login">Login</string>
    <string name="history_nav">History</string>
    <string name="open_nav">Navigation Drawer open</string>
    <string name="close_nav">Navigation Drawer close</string>
    <string name="skip_login">Skip Login !</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="send_otp">Send otp</string>
    <string name="log_out">Log out</string>
    <string name="history">History</string>
    <string name="change_language">Change Language</string>
    <string name="mango">Mango</string>
    <string name="potato">Potato</string>
    <string name="rice">Rice</string>
    <string name="grapes">Grapes</string>
    <string name="cassava">Cassava</string>
    <string name="farmer">Farmer</string>
    <string name="treat">Treatment</string>
    <string name="name_treat">Name :</string>
    <string name="cause">Cause :</string>
    <string name="treat_text">Treatment :</string>
</resources>