<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">

    
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="?attr/actionBarTheme"
                app:navigationIcon="@drawable/menu_nav" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/main"
                />

         <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="25dp"
        android:rowCount="2"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:id="@+id/cotton"

            app:cardBackgroundColor="#6CC6C6"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@color/white"
                    android:src="@drawable/cotton" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/cotton"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="30sp"
                    android:textStyle="bold|italic"

                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:id="@+id/tomato"
            app:cardBackgroundColor="#6CC6C6"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:src="@drawable/tom"
                    android:layout_height="150dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tomato"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold|italic"

                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:id="@+id/corn"
            app:cardBackgroundColor="#6CC6C6"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@color/white"
                    android:src="@drawable/corn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/corn"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="30sp"
                    android:textStyle="bold|italic"

                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:id="@+id/apple"
            app:cardBackgroundColor="#6CC6C6"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/apple"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apple"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="30sp"
                    android:textStyle="bold|italic"
                    android:layout_gravity="center_horizontal"
                    />


            </LinearLayout>



        </androidx.cardview.widget.CardView>

     <!--   <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:id="@+id/mango"

            app:cardBackgroundColor="#6CC6C6"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@color/white"
                    android:src="@drawable/mango" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mango"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="30sp"
                    android:textStyle="bold|italic"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>-->

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:id="@+id/potato"

            app:cardBackgroundColor="#6CC6C6"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@color/white"
                    android:src="@drawable/potato" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/potato"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="30sp"
                    android:textStyle="bold|italic"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:id="@+id/grapes"
            app:cardBackgroundColor="#6CC6C6"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@color/white"
                    android:src="@drawable/grapes" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/grapes"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="30sp"
                    android:textStyle="bold|italic"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:id="@+id/rice"
            app:cardBackgroundColor="#6CC6C6"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@color/white"
                    android:src="@drawable/rice" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/rice"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="30sp"
                    android:textStyle="bold|italic"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
                 android:id="@+id/cassava"

                 app:cardBackgroundColor="#6CC6C6"
                 app:cardCornerRadius="20dp">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="0"
                     android:layout_column="0"
                     android:orientation="vertical">

                     <ImageView
                         android:layout_width="150dp"
                         android:layout_height="150dp"
                         android:background="@color/white"
                         android:src="@drawable/cassava" />

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="@string/cassava"
                         android:textColor="@android:color/holo_orange_dark"
                         android:textSize="30sp"
                         android:textStyle="bold|italic"
                         />
                 </LinearLayout>

             </androidx.cardview.widget.CardView>

    </GridLayout>
        </LinearLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>